<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterObjetiveOActivity"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_banner"
       android:contentDescription="@string/banner_description"
       />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_title"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLines="1"
        android:textColorHint="#BDBDBD"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_objetive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="#BDBDBD"
        android:hint="@string/hint_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:textStyle="italic"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="#BDBDBD"
        android:hint="@string/hint_date_objetive"
        android:maxLines="1"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlannedDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            android:textStyle="italic"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_objetive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:icon="@drawable/ic_save_24dp"
            app:iconPadding="10dp"
            app:backgroundTint="?attr/colorPrimary"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:icon="@drawable/ic_cancel_24dp"
            app:iconPadding="10dp"
            app:backgroundTint="?attr/colorSecondary"
            app:cornerRadius="8dp"/>
    </LinearLayout>


</LinearLayout>

