<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnlyObjectiveActivity">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        tools:ignore="UselessParent">

        <!-- Title -->
        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp"/>

        <!-- Date -->
        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_date"
            android:textSize="14sp"
            android:textColor="?attr/colorSecondary"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"/>

        <!-- Description -->
        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_below="@id/item_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/item_date"/>
    </RelativeLayout>

</LinearLayout>